CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_OPENAL "Build the OpenAL module" ON)

IF(BUILD_MOD_OPENAL)
    PROJECT(OpenAL)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(OpenAL REQUIRED)

    INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
    ADD_LIBRARY(${PROJECT_NAME} MODULE main buffer source)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENAL_LIBRARY})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
ENDIF(BUILD_MOD_OPENAL)
