CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_SDL "Build the SDL module" ON)

IF(BUILD_MOD_SDL)
    PROJECT(SDL)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(SDL)
    IF(SDL_FOUND)
        INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
        ADD_LIBRARY(${PROJECT_NAME} MODULE main joystick keyboard mouse window)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARY})
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

		IF(INSTALL_MODULES)
			INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
		ENDIF(INSTALL_MODULES)
    ELSE(SDL_FOUND)
        MESSAGE(WARNING "Could not find SDL library - module will not be built")
    ENDIF(SDL_FOUND)
ENDIF(BUILD_MOD_SDL)
