CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_STB_IMAGE "Build the STB Image module" ON)

IF(BUILD_MOD_STB_IMAGE)
    PROJECT(STB-Image)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    ADD_LIBRARY(${PROJECT_NAME} MODULE main load stb_image)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

    IF(INSTALL_MODULES)
        INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
    ENDIF(INSTALL_MODULES)
ENDIF(BUILD_MOD_STB_IMAGE)
