CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_SNDFILE "Build the SndFile module" ON)

IF(BUILD_MOD_SNDFILE)
    PROJECT(SndFile)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(SndFile)
    IF(SNDFILE_FOUND)
        INCLUDE_DIRECTORIES(${SNDFILE_INCLUDE_DIR})
        ADD_LIBRARY(${PROJECT_NAME} MODULE main load)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SNDFILE_LIBRARY})
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

		IF(INSTALL_MODULES)
			INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
		ENDIF(INSTALL_MODULES)
    ELSE(SNDFILE_FOUND)
        MESSAGE(WARNING "Could not find SndFile library - module will not be built")
    ENDIF(SNDFILE_FOUND)
ENDIF(BUILD_MOD_SNDFILE)
